# ShoulderShield

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
include/: Old_Pico_BNO08x.h  Pico_BNO085_I2C.h  Pico_BNO08x.h  Pico_BNO08xOld.h  bno085.h  bno085_rvc.h  bno085_spi.h  sh2M.h  sh2_multi.h
scripts/: IMU_Data_Collector.py  IMU_data_2025-07-20_16-33-35.sto  IMU_data_2025-07-20_16-34-30.sto
src/: 2SPImain.c  3IMUmain.c  CMakeLists.txt  I2C3ImuMain.c  Main3S.c  OpenSimData.c  Pico_BNO085_I2C.C  Pico_BNO08x.c  Pico_BNO08xOld2.c  Pico_BNO08x_debug.c  Pico_BNO08x_multi.c  Pico_BNO08x_old.c  Pico_BNO0X3C.c  Seperate_SPi_test.c  Simple_test_3Imu.c  bno085.c  bno085_example.c  bno085_rvc.c  bno085_rvc_example.c  bno085_spi.c  bno085_spi_example.c  main.c  mainOld.c  sh2.c  sh2M.c  sh2_multi.c  shtp.c
src/bno085/: bno085.c  bno085.h
